2018-12-08  Ben Elliston  <bje@gnu.org>

	* config/vxworks.exp (${board}_init): Use 'ne' instead of !=.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* lib/tip.exp (tip_open): Put braces around if expression.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* runtest.exp, lib/utils.exp, lib/targetdb.exp, lib/target.exp,
	lib/remote.exp, lib/framework.exp, lib/dg.exp, config/vxworks.exp,
	config/sim.exp, config/gdb_stub.exp, config/aarch64-fv8.exp,
	baseboards/vr4300-sim.exp, baseboards/vr4111-sim.exp,
	baseboards/vr4100-sim.exp, baseboards/sh-sid.exp,
	baseboards/mt-sid.exp, baseboards/mips-sim.exp,
	baseboards/mips-sim-idt64.exp, baseboards/mips-sim-idt32.exp,
	baseboards/i386-sid.exp, baseboards/arm-sim.exp,
	baseboards/arm-ice.exp, baseboards/androideabi.exp,
	testsuite/runtest.all/utils.test,
	testsuite/runtest.all/target.test: Replace string literal
	comparisons using == and != with 'eq' and 'ne'.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* runtest.exp, lib/utils.exp, lib/target.exp, lib/ssh.exp,
	lib/rsh.exp, lib/rlogin.exp, lib/remote.exp, lib/libgloss.exp,
	lib/framework.exp, lib/dg.exp, lib/dejagnu.exp,
	config/vxworks.exp, config/unix.exp, config/sim.exp,
	config/gdb_stub.exp, config/gdb-comm.exp, config/adb.exp,
	baseboards/multi-sim.exp, baseboards/cris-sim.exp,
	baseboards/basic-sim.exp, baseboards/basic-sid.exp,
	baseboards/androideabi.exp, testsuite/runtest.all/load_lib.exp,
	testsuite/libdejagnu/tunit.exp: Replace empty string comparisons
	using == and != with 'eq' and 'ne'.

2018-12-07  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/default_procs.tcl (lib_bool_test): New.
	(lib_regexp_test): New.
	(lib_pat_test): Brace "if" conditions.
	(lib_pat_test): Remove spurious quotes in debugging output.
	(run_tests): Add support for comments in lists of procedure tests.

	* testsuite/runtest.all/config.test: Adjust to use run_tests
	procedure. Fixes issue cited in FIXME comment.

	* testsuite/runtest.all/utils.test (getdirs tests): Fix these.